[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/graphics/traps/spikes.png" type="Texture" id=1]
[ext_resource path="res://scripts/Spikes.gd" type="Script" id=2]
[ext_resource path="res://resources/sounds/trap_spikes_trigger.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[node name="Spikes" type="Area2D" groups=[
"Spikes",
]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TriggerPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SoundEffects"

[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spikes_body_exited"]
